# jupyter_compare_view

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  RELEASE.md  example_notebook-Copy1.ipynb  example_notebook.ipynb  future_ideas.md  jupyter-splitview.json  jupyterlite_compare_view_notebook.ipynb  jupyterlite_debugging_notebook.ipynb  jupyterlite_notebook.ipynb  jupyterlite_splitview_notebook.ipynb  pyproject.toml  setup.py  splitview_magic.ipynb  splitview_minimal_example.ipynb  test_jupyterlab_notebook.ipynb  two_bugs.ipynb
.binder/: requirements.txt
.github/workflows/: JupyterLite.yml  jupyter_light.yml  pypi-publish.yml  python-package.yml
.jupyterlight/: requirements.txt
.jupyterlite/: requirements.txt
debugging_notebooks/: bug_image_alignment.ipynb  bug_retina_display.ipynb  twitter_notebook.ipynb
js/: README.md  package.json  webpack.config.js
js/lib/: example.js  extension.js  labplugin.js
jupyter-splitview/: example.py
jupyter_compare_view/: __init__.py  compare.py  inject_dependencies.html  sw_cellmagic.py  template.html
jupyter_splitview/: __init__.py  inject.html  inject.py  inject_dependencies.html  inject_split.html  sw_cellmagic.py  template.py
splitview/: __init__.py  _version.py
tests/: test_import.py
