[tool.poetry]
name = "jupyter-splitview"
version = "0.0.6"
description = "Making before/after image sliders in JupyterLab"
authors = ["kolibril13 <44469195+kolibril13@users.noreply.github.com>"]
license = "MIT"
include = [
    "vendor/juxtapose/build/css/juxtapose.css",
    "vendor/juxtapose/build/js/juxtapose.min.js",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipython = ">=7.0.0"
ipykernel = ">=6.13.0"
Pillow = ">=9.1.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = ">=22.3.0" }
matplotlib = ">=3.5.1"
scipy = ">=1.8.0"
scikit-image = ">=0.19.2"
pytest = ">=7.1.2"
isort = ">=5.10.1"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
