[tool.poetry]
name = "jupyter_compare_view"
version = "0.1.1"
description = "Blend Between Multiple Images in JupyterLab."
authors = ["Octoframes"]
license = "MIT"
readme = "README.md"
include = ["vendor/compare_view/browser_compare_view.js"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipython = ">=6.0.0"
ipykernel = ">=5.0.0"
Pillow = ">=9.1.0"
Jinja2 = ">=3.1.2"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = ">=22.3.0" }
matplotlib = ">=3.5.1"
scipy = ">=1.8.0"
scikit-image = ">=0.19.2"
pytest = ">=7.1.2"
isort = ">=5.10.1"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
