[tool.poetry]
name = "jupyter_compare_view"
version = "0.3.1"
description = "Blend Between Multiple Images in JupyterLab."
authors = ["Octoframes"]
license = "MIT"
readme = "README.md"
include = [
    { path = "vendor/compare_view/browser_compare_view.js", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
ipython = ">=9.15.0"
ipykernel = ">=7.3.0"
Pillow = ">=12.3.0"
Jinja2 = ">=3.1.6"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = ">=26.5.1" }
matplotlib = ">=3.11.1"
scipy = ">=1.18.0"
scikit-image = ">=0.26.0"
pytest = ">=9.1.1"
isort = ">=8.0.1"
jupyterlab = ">=4.6.2"
jupyter-server = ">=2.20.0"
urllib3 = ">=2.7.0"
bleach = ">=6.4.0"
requests = ">=2.34.2"
setuptools = ">=83.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
